@@ -2,9 +2,10 @@ package de.raysha.lib.jsimpleshell.script.cmd;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 
 import de.raysha.lib.jsimpleshell.CommandRecorder;
 import de.raysha.lib.jsimpleshell.PromptElement;
@@ -16,16 +17,17 @@ import de.raysha.lib.jsimpleshell.annotation.Param;
 import de.raysha.lib.jsimpleshell.builder.ShellBuilder;
 import de.raysha.lib.jsimpleshell.exception.CLIException;
 import de.raysha.lib.jsimpleshell.exception.ExitException;
+import de.raysha.lib.jsimpleshell.handler.CommandLoopObserver;
 import de.raysha.lib.jsimpleshell.handler.MessageResolver;
 import de.raysha.lib.jsimpleshell.script.Environment;
+import de.raysha.lib.jsimpleshell.script.cmd.LoopState.LoopExecution;
 import de.raysha.lib.jsimpleshell.util.MultiMap;
 
 /**
  * This handler contains loop-commands that can be used for scripting.
  * @author rainu
  */
-public class LoopCommandHandler {
-
+public class LoopCommandHandler implements CommandLoopObserver {
 	public static final String VARIABLE_NAME_FROM = "_LF";	//LOOP_FROM
 	public static final String VARIABLE_NAME_UNTIL = "_LU"; //LOOP_UNTIL
 	public static final String VARIABLE_NAME_STEP = "_LS"; //LOOP_STEP
@@ -39,6 +41,8 @@ public class LoopCommandHandler {
 
 	@Inject
 	private Environment environment;
+
+	private final LinkedList<LoopState> states = new LinkedList<LoopState>();
 
 	@Command(abbrev = "command.abbrev.loop.count", description = "command.description.loop.count",
 			header = "command.header.loop.count", name = "command.name.loop.count", startsSubshell = true)
@@ -74,113 +78,53 @@ public class LoopCommandHandler {
 		if(mainLoop()){
 			CommandRecorder recorder = new CommandRecorder(subshell);
 
-			final List<String> userCommands = recorder.recordCommands();
+			List<String> userCommands = recorder.recordCommands();
 			purge(userCommands);
 
+			LoopState state = buildLoopState(from, until, step, userCommands);
+			states.add(state);
 
-			//because in normal direction the variables will be created in inverse direction
-			LinkedList<Long> indexes = new LinkedList<Long>();
-			for(long i=from; i <= until; i += step){
-				indexes.add(i);
-			}
-
-			for(long i=from; i <= until; i += step){
-				final long index = indexes.removeFirst();
-
-				List<String> commands = enrichCommands(userCommands, index, from, until, step);
-
-				shell.getPipeline().prepend(commands);
-				shell.getPipeline().prepend(
-						generateSetEnvironmentVariables(index, from, until, step));
-			}
-			setRemoveVariables();
+			//the loop observer hook ensures that the loop commands
+			//will be prepend to the shell's pipeline
+			addNextIterationToPipeline();
 		}else{
 			//i am a sub-loop
 			subshell.commandLoop();
 		}
 	}
 
-	private void setRemoveVariables() {
-		shell.getPipeline().prepend(
-				removeGlobalVariable(VARIABLE_NAME_COUNT),
-				removeGlobalVariable(VARIABLE_NAME_FROM),
-				removeGlobalVariable(VARIABLE_NAME_UNTIL),
-				removeGlobalVariable(VARIABLE_NAME_STEP));
+	@Override
+	public void cliBeforeCommandLine(String line) {
+		//do nothing
 	}
 
-	private String removeGlobalVariable(String name) {
-		//TODO: implement remove variables!
-		return "";
-	}
+	@Override
+	public void cliAfterCommandLine(String line) {
+		final LoopState currentState = getCurrentState();
 
-	private List<String> enrichCommands(List<String> userCommands, Long offset, Long from, Long until, Long step) {
-		//if an inner-loop is created.. the loop variables will be overridden by the inner loop
-		//we must restore the variables after the inner loop is leaving
-		LinkedList<String> enriched = new LinkedList<String>();
-
-		for(int i=0; i < userCommands.size(); i++){
-			final String command = userCommands.get(i);
-			enriched.add(command);
-
-			if(	command.contains(getCommandNameForLoopEnd()) ||
-				command.contains(getCommandAbbrevForLoopEnd())){
-
-				enriched.addAll(Arrays.asList(generateSetEnvironmentVariables(offset, from, until, step)));
+		if(currentState != null && currentState.hasNext()){
+			//check if the line is the end of a previous loop-iteration
+			if(isLineTheEndOfIteration(line, currentState)){
+				//if we are at the end of a loop-iteration
+				//we must add the next loop-iteration to the shell's pipeline
+				addNextIterationToPipeline();
 			}
 		}
 
-		return enriched;
-	}
-
-	private String[] generateSetEnvironmentVariables(Long offset, Long from, Long until, Long step) {
-		return new String[]{
-				setGlobalVariable(VARIABLE_NAME_COUNT, offset),
-				setGlobalVariable(VARIABLE_NAME_FROM, from),
-				setGlobalVariable(VARIABLE_NAME_UNTIL, until),
-				setGlobalVariable(VARIABLE_NAME_STEP, step)
-		};
-	}
-
-	private String setGlobalVariable(String varName, Object value) {
-		final String command = "." + messageResolver.resolveGeneralMessage(EnvironmentCommandHandler.COMMAND_NAME_SET_GLOBAL_VARIABLE);
-
-		return command + " \"" + varName + "\" \"" + String.valueOf(value) + "\"";
-	}
-
-	private void purge(List<String> commands) {
-		final String name = getCommandNameForLoopEnd();
-		final String abbrev = getCommandAbbrevForLoopEnd();
-
-		if(commands != null && !commands.isEmpty()){
-			String lastLine = commands.get(commands.size() - 1);
-			lastLine = lastLine.trim();
-
-			if(	lastLine.trim().endsWith(name) ||
-				lastLine.trim().endsWith(abbrev)){
-
-				commands.remove(commands.size() - 1);
-			}
+		//empty states must be removed
+		if(currentState != null && !currentState.hasNext()){
+			states.removeLast();
 		}
 	}
 
-	private String getCommandAbbrevForLoopEnd() {
-		return "." + messageResolver.resolveGeneralMessage(LoopSpecialCommand.COMMAND_ABBREV_LOOP_END);
+	private boolean isLineTheEndOfIteration(String line, LoopState state) {
+		return line.endsWith(generateLoopEndMark(state.getUniqId()));
 	}
 
-	private String getCommandNameForLoopEnd() {
-		return "." + messageResolver.resolveGeneralMessage(LoopSpecialCommand.COMMAND_NAME_LOOP_END);
-	}
+	private LoopState getCurrentState(){
+		if(states.isEmpty()) return null;
 
-	private boolean mainLoop() {
-		//if in my "shell-chain" is an another LoopPrompt than
-		//i am not the (only and the one) main loop!
-		for(PromptElement part : shell.getPath()){
-			if(part instanceof LoopPrompt){
-				return false;
-			}
-		}
-
-		return true;
+		return states.getLast();
 	}
 
 	private void copyMainHandler(Shell subshell) {
@@ -207,6 +151,89 @@ public class LoopCommandHandler {
 				}
 			}
 		}
+	}
+
+	private void purge(List<String> commands) {
+		final String name = getCommandNameForLoopEnd();
+		final String abbrev = getCommandAbbrevForLoopEnd();
+
+		if(commands != null && !commands.isEmpty()){
+			String lastLine = commands.get(commands.size() - 1);
+			lastLine = lastLine.trim();
+
+			if(	lastLine.trim().endsWith(name) ||
+				lastLine.trim().endsWith(abbrev)){
+
+				commands.remove(commands.size() - 1);
+			}
+		}
+	}
+
+	private LoopState buildLoopState(Long from, Long until, Long step, List<String> userCommands) {
+		Map<String, Object> loopVars = new HashMap<String, Object>();
+		loopVars.put(VARIABLE_NAME_FROM, from);
+		loopVars.put(VARIABLE_NAME_UNTIL, until);
+		loopVars.put(VARIABLE_NAME_STEP, step);
+
+		LinkedList<Long> indexes = new LinkedList<Long>();
+		for(long i=from; i <= until; i += step){
+			indexes.add(i);
+		}
+
+		LoopState state = new LoopState(
+				userCommands,
+				indexes,
+				loopVars,
+				VARIABLE_NAME_COUNT,
+				messageResolver);
+
+		return state;
+	}
+
+	private void addNextIterationToPipeline() {
+		final LoopState currentState = getCurrentState();
+
+		LoopExecution loopExec = currentState.next();
+		List<String> commands = loopExec.getCommands();
+		mark(commands, currentState.getUniqId());
+
+		shell.getPipeline().prepend(commands);
+	}
+
+	private void mark(List<String> userCommands, Object uniqId) {
+		if(userCommands == null || userCommands.isEmpty()) return;
+
+		//we must mark the last line that we know later that this command is
+		//the last recorded command of this loop instance!
+		String lastCommand = userCommands.get(userCommands.size() - 1);
+		lastCommand += generateLoopEndMark(uniqId);
+
+		userCommands.remove(userCommands.size() - 1);
+		userCommands.add(lastCommand);
+	}
+
+	private String generateLoopEndMark(Object uniqId) {
+		return "#loop_end[" + uniqId + "]"; //use comment function as mark
+	}
+
+	private String getCommandAbbrevForLoopEnd() {
+		return "." + messageResolver.resolveGeneralMessage(LoopSpecialCommand.COMMAND_ABBREV_LOOP_END);
+	}
+
+	private String getCommandNameForLoopEnd() {
+		return "." + messageResolver.resolveGeneralMessage(LoopSpecialCommand.COMMAND_NAME_LOOP_END);
+	}
+
+	private boolean mainLoop() {
+		//if in my "shell-chain" is an another LoopPrompt than
+		//i am not the (only and the one) main loop!
+		for(PromptElement part : shell.getPath()){
+			if(part instanceof LoopPrompt){
+				return false;
+			}
+		}
+
+		return true;
 	}
 
 	private List<Object> getMainHandler(Shell shell) {
